implemented spherical KDE
Implemented spherical KDE in pdf module. Fixed bug in latlon2xyz function.

--- a/examples/4_Real Data.ipynb
+++ b/examples/4_Real Data.ipynb
@@ -15,7 +15,7 @@
     "import mplstereonet\n",
     "\n",
     "#load SNE\n",
-    "sys.path.append(\"G:\\My Drive\\Documents\\PhD\\Analysis\\libs\")\n",
+    "sys.path.append(\"../../\")\n",
     "from pycompass.IOTools import ccXML\n",
     "from pycompass.SNE import pdf\n",
     "\n",
