--- a/examples/1_Explicit SNE.ipynb
+++ b/examples/1_Explicit SNE.ipynb
@@ -13,7 +13,7 @@
     "import sys, os\n",
     "\n",
     "#load utils for importing data\n",
-    "sys.path.append(\"G:\\My Drive\\Documents\\PhD\\Analysis\\libs\")\n",
+    "sys.path.append(\"../../\")\n",
     "import pycompass\n",
     "from pycompass.IOTools import ccXML\n",
     "from pycompass.SNE import pdf"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,7 @@
     "        bound = np.pi / 2\n",
     "        ax.contourf(np.linspace(-bound,bound,res),np.linspace(-bound,bound,res), vals,cmap=\"coolwarm\")\n",
     "        \n",
+    "        ax.set_longitude_grid_ends(90)\n",
     "        ax.grid() #grid\n",
     "        \n",
     "    #finally, add the color-ramp\n",
@@ -112,15 +113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pdf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-324e3a367851>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#########################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#evaluate prior probability over grid\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mgrid\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m300\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mnormal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0.46976518\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m0.75962028\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.44977517\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mnormal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnormal\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnormal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pdf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#########################\n",
     "#TEST PRIOR\n",
     "#########################\n",
     "#evaluate prior probability over grid\n",
-    "grid = pdf.grid(100)\n",
+    "grid = pdf.grid(300)\n",
     "normal = np.array([0.46976518, -0.75962028, 0.44977517])\n",
     "normal = normal / np.linalg.norm(normal)\n",
     "prior = pdf.prior(grid,normal)"
